[tool.poetry]
name = "counter-app"
version = "0.1.0"
description = ""
authors = ["Lucifer516-hp <149323025+Lucifer516-hp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
